--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
             "error",
             "always"
         ],
-        "no-console": 0
+        "no-console": 0,
+        "no-unused-vars": 0
     }
 }
