Renamed package name, updated module name, added a README, I think we're ready to publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jshqx",
+  "name": "js-hqx",
   "description": "hqx Pixel Art Scaling Algorithm for JavaScript/Canvas",
   "version": "0.0.1",
   "homepage": "https://github.com/rohan-deshpande/js-hqx",
